# blasphemer

./: .gitignore  DOCUMENTATION_CHANGELOG.md  HOMEBREW.md  HOMEBREW_SETUP.md  LEARN.md  README.md  USER_GUIDE.md  blasphemer.sh  config.default.toml  config.qwen.toml  convert-to-gguf.sh  convert-to-gguf.sh.backup  install-macos.sh  pyproject.toml  pytest.ini  run_tests.sh  upload_gguf.py
Formula/: blasphemer.rb
docs/: FINETUNING.md  HOMEBREW_STATUS.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  QWEN_ABLITERATION_GUIDE.md  README.md  STATUS.md  TESTING.md  UPLOAD_GUIDE.md  USER_GUIDE.md  WORKFLOW_ENHANCEMENTS.md  WORKFLOW_GUIDE.md
src/heretic/: config.py  dataset_processor.py  evaluator.py  finetuner.py  lora_trainer.py  main.py  model.py  progress.py  utils.py
tests/: __init__.py
tests/integration/: test_checkpoint_system.py
tests/scripts/: test_shell_scripts.sh
tests/unit/: test_config.py  test_progress.py  test_serialization.py  test_utils.py
