[project]
name = "blasphemer"
version = "1.2.0"
description = "Enhanced fork of Heretic optimized for macOS (Apple Silicon) with performance optimizations, checkpoint system, LoRA fine-tuning, and LM Studio integration"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Philipp Emanuel Weidmann", email = "pew@worldwidemann.com" }
]
maintainers = [
    { name = "Christopher Bradford" }
]
requires-python = ">=3.10"
keywords = ["llm", "transformer", "abliteration", "macos", "apple-silicon", "lm-studio", "checkpoint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.34.4",
    "optuna>=4.5.0",
    "peft>=0.14.0",
    "protobuf>=3.20.0",
    "pydantic-settings>=2.10.1",
    "PyPDF2>=3.0.0",
    "questionary>=2.1.1",
    "rich>=14.1.0",
    "sentencepiece>=0.1.99",
    "transformers>=4.55.2",
    "trl>=0.13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sunkencity999/blasphemer"
Documentation = "https://github.com/sunkencity999/blasphemer/blob/main/USER_GUIDE.md"
Repository = "https://github.com/sunkencity999/blasphemer.git"
Issues = "https://github.com/sunkencity999/blasphemer/issues"
Changelog = "https://github.com/sunkencity999/blasphemer/commits/main/"
"Original Heretic" = "https://github.com/p-e-w/heretic"

[project.scripts]
blasphemer = "heretic.main:main"
heretic = "heretic.main:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "heretic"
